--- a/index.css
+++ b/index.css
@@ -1,7 +1,90 @@
+
 body{
     font-family: "Roboto", sans-serif;
    
 }
+#navbar{
+   color: #fff;
+    padding: 10px;
+    background-image: url("https://akshaysaini.in/img/clouds.png");
+    background-size: cover;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+}
+#contact{
+  display: flex;
+  flex-direction: column;
+}
+.plane-image{
+  width: 40px;
+}
+.my-image{
+  width: 200px;
+  border-radius: 50%;
+}
+.skill-logo{
+  width: 60px;
+  margin: 10px;
+}
+.coffee-image{
+  width: 80px;
+}
+.contact-icon{
+  width: 30px;
+  margin: 5px;
+  cursor: pointer;
+}
+#about{
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.send-message-container{
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+
+}
+.to-user-contact{
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+
+}
+.text-box{
+  height: 100px;
+  border-radius: 5px;
+  padding: 5px;
+}
+#submit-btn{
+    align-self: center;
+    width: 100px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+    border: none;
+    background-color: #0f0f0f;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 10px;
+}
+.contact-header{
+  display: flex;
+  justify-content: space-between;
+}
+.contact-links-container{
+  margin-top: 20px;
+  align-self: center;
+
+}
+
+@media screen and (min-width: 600px) {
+  
+
 #navbar{
     color: #fff;
     padding: 10px;
@@ -34,9 +117,7 @@ body{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
-.name{
-   font-family: "Bungee Spice", sans-serif;
-}
+
 .my-image{
     width: 200px;
     border-radius: 50%;
@@ -202,19 +283,4 @@ img {vertical-align: middle;}
 .active, .dot:hover {
   background-color: #717171;
 }
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
 }
